fix: packages desc overflow

--- a/transcribe/data/css/packages.css
+++ b/transcribe/data/css/packages.css
@@ -238,3 +238,9 @@ a:hover {
 /*    transform: scale(1.01);*/
 
 /*}*/
+
+.pkg-desc
+{
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
